[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme_test.tres" type="Theme" id=1]
[ext_resource path="res://WeaponSlotButton.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0627451, 0.129412, 0.490196, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.117647, 0.847059, 0.745098, 1 )

[sub_resource type="StyleBoxFlat" id=1]

[node name="WeaponSlotButton" type="Button" groups=["weapon"]]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 48, 48 )
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 3 )

[node name="WeaponIcon" type="Sprite" parent="."]
offset = Vector2( 24, 24 )

[node name="WeaponSlotSoundPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="." to="." method="_on_WeaponSlotButton_pressed"]
